--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
     <div class="clearfix"> </div>
 
-    <div id="twoOptions" class="twoOptions">
+    <div id="twoOptions" class="twoOptions" style="display: none;">
         <div class="registerOrder card" id="form1">
             <div class="cardContainer">
                 <i class="fas fa-cash-register"></i>
@@ -91,7 +91,7 @@
     </div>
 
 
-    <div id="formTP" class="informacionTP " style="display: block;">
+    <div id="formTP" class="informacionTP">
         <div class="formHeader">
             <div class="metaHeader">
                 <img class="smallImage" src="images/pmSmall.png">
